--- a/public/govna.html
+++ b/public/govna.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/footable.bootstrap.css">
+    <link rel="stylesheet" href="css/footable.core.bootstrap.css">
+    <script src="js/jquery-3.7.1.js"></script>
+    <script src="js/footable.js"></script>
+    <script src="js/footable.paging.js"></script>
+    <script src="js/footable.sorting.js"></script>
+    <script src="js/footable.filtering.js"></script>
+    <script id="qu" src="js/main.js"></script>
 </head>
+
 <body>
-    <script src="js/main.js"></script>
+    <table id="firsttable" class="table toggle-circle">
+        <thead>
+            <tr>
+                <th data-name="id">id </th>
+                <th data-name="name">name </th>
+                <th data-name="age">age</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </body>
+<script>
+    console.log("мать ебал джаваскрипта");
+    $(document).ready(function () {
+        var list = jsonData;
+        console.log(list);
+        console.log("и отца ебал джаваскрипта");
+        $('#firsttable').footable({
+            rows: list
+        });
+    });
+</script>
+
 </html>
