--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>crud web mojo</title>
-    <link href="/css/style.css" rel="stylesheet">
+    <!-- <link href="/css/style.css" rel="stylesheet"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet">
-    <script defer src="js/jquery-3.7.1.js"></script>
+    <link rel="stylesheet" href="css/footable.bootstrap.css">
+    <link rel="stylesheet" href="css/footable.core.bootstrap.css">
+    <link rel="stylesheet" href="css/footable.standalone.css">
+    <link href="/css/style.css" rel="stylesheet">
+
+    <script src="js/jquery-3.7.1.js"></script>
+    <script src="js/footable.js"></script>
+    <script src="js/footable.paging.js"></script>
+    <script src="js/footable.sorting.js"></script>
+    <script src="js/footable.filtering.js"></script>
+    <script id="qu" src="js/main.js"></script>
 </head>
 
 <body>
@@ -25,17 +35,8 @@
                 </form>
             </div>
         </div>
-        <div class="h2">
-            <div class="h-center">
-                <h1>Удалить запись</h1>
-                <form action="/delete_user" method="POST" onsubmit="return confirm('Действительно удалить запись?');">
-                    <label for="user_id">id записи:</label><br>
-                    <input type="text" name="user_id" placeholder="Введите id" required><br>
-                    <button type="submit">Удалить запись!</button>
-                </form>
-            </div>
-        </div>
-        <div class="h3">
+
+        <div class="h1">
             <div class="h-center">
                 <h1>Обновить запись</h1>
                 <form action="/update_user" method="POST" onsubmit="return confirm('Действительно обновить запись?');">
@@ -48,43 +49,37 @@
             </div>
         </div>
 
-        <div class="h4">
+        <div class="h2">
             <div class="h-center">
-                <h1>Сортированный вывод</h1>
-                <form action="/get_user" method="POST">
-                    <label for="data">Введите данные:</label><br>
-                    <input list="sort_field" name="sort_field" placeholder="Выберите поле сортировки"><br>
-                    <datalist id="sort_field">
-                        <option value="id">
-                        <option value="name">
-                        <option value="age">
-                    </datalist>
-
-                    <input list="sort_type" name="sort_type" placeholder="Выберите тип сортировки" required><br>
-                    <datalist id="sort_type">
-                        <option value="asc">
-                        <option value="desc">
-                    </datalist>
-                    <button type="submit">Отправить запрос!</button>
+                <h1>Удалить запись</h1>
+                <form action="/delete_user" method="POST" onsubmit="return confirm('Действительно удалить запись?');">
+                    <label for="user_id">id записи:</label><br>
+                    <input type="text" name="user_id" placeholder="Введите id" required><br>
+                    <button type="submit">Удалить запись!</button>
                 </form>
             </div>
         </div>
-
-        <div class="h5">
-            <div class="h-center">
-                <h1>help</h1>
-                <form class="content" action="/help" method="GET">
-                    <button type="submit">Получить помощь!</button>
-                </form>
-            </div>
-        </div>
-        <div class="h6">
-            <div class="h-center">
-                <h1>help</h1>
-                <form class="content" action="/get_json" method="GET">
-                    <button type="submit">открыть json</button>
-                </form>
-            </div>
-        </div>
+    </div>
+    <table id="firsttable" class="table footable " data-paging="true" data-sorting="true">
+        <thead>
+            <tr>
+                <th data-name="id" data-type="number">id </th>
+                <th data-name="name">name </th>
+                <th data-name="age">age</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</body>
+<script>
+    $(document).ready(async function () {
+        var list = await loadJson();
+        $('#firsttable').footable({
+            colums: list,
+            rows: list
+        });
+    });
+</script>
 
 </html>
